stateDiagram-v2
    CONNECTED : CONNECTED<br>(Đang đọc OBD)
    DISCONNECTED : DISCONNECTED<br>(Callback)
    SCANNING : SCANNING<br>(Quét lại - Timeout 30s)
    RETRY : RETRY WAIT<br>(Chờ 2 giây)

    CONNECTED --> DISCONNECTED : Mất kết nối
    DISCONNECTED --> SCANNING : return true
    SCANNING --> CONNECTED : Kết nối lại
    SCANNING --> RETRY : Không tìm thấy
    RETRY --> SCANNING : Quay lại SCANNING
